06-monitoring/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.apps.house.simonellistonball.com`)
      services:
        - name: prometheus-grafana
          port: 80
  tls:
    secretName: monitoring-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.apps.house.simonellistonball.com`)
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
  tls:
    secretName: monitoring-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`alertmanager.apps.house.simonellistonball.com`)
      services:
        - name: prometheus-kube-prometheus-alertmanager
          port: 9093
  tls:
    secretName: monitoring-tls
